--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <p>I am originally from the Czech Republic, but I moved to the US for university. I'm currently a senior at Yale studying Computer Science. I really enjoy creating useful digital products.</p>
 
-                <p>In the past, I have worked at Facebook and Taser International. After I graduate, I'll be joining Uber as an associate product manager. My interests technology, beer, coffee, and fashion. In my free time, I write about style on my fashion blog Sherman’s Alley and other stuff on Medium.</p>
+                <p>In the past, I have worked at Facebook and Axon. After I graduate, I'll be joining Uber as an associate product manager. My interests technology, beer, coffee, and fashion. In my free time, I write about style on my fashion blog Sherman’s Alley and other stuff on Medium.</p>
 
                 <p>I enjoy meeting new people, so please reach out to me through email or Facebook.</p>
 
