--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <p>In the past, I have worked at Facebook and Axon. After I graduate, I'll be joining Uber as an associate product manager. My interests technology, beer, coffee, and fashion. In my free time, I write about style on my fashion blog Sherman’s Alley and other stuff on Medium.</p>
 
-                <p>I enjoy meeting new people, so please reach out to me through email or Facebook.</p>
+                <p>Feel free to message me about anything!</p>
 
                 <div class="social">
                     <a href="mailto:minhtri@pham.cz"><img src="static/img/mail_icon.png" alt=""></a>
