add back sizerec

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="six columns">
                 <h5 class="right_align">projects</h5>
-         <!--            <div class="six columns project">
+                    <div class="six columns project">
                         <a href="http://www.sizerec.com" target="_blank">
                             <img src="static/img/sr_icon.png" alt="">
                             <div class="description">
@@ -55,7 +55,7 @@
                                 <div class="date">2017-present</div>
 
                             </div>
-                        </a> -->
+                        </a>
                     </div>
                     <div class="six columns project">
                         <a href="http://www.shopthisfeed.com" target="_blank">
