--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="static/css/style.css">
 
     <link rel="icon" type="image/x-icon" href="static/img/favicon.png" />
+
+
+
+    <meta name='shop_name' content="Minh's Store">
+    <meta name='pos_id' content=12>
+    <meta name="sizerec_url" content="https://localhost:5000/c">
+    <link rel="stylesheet" type="text/css" href="https://sizerec.herokuapp.com/static/css/selectize.css" />
+    <link rel="stylesheet" href="https://sizerec.herokuapp.com/static/css/vex.css" />
+    <link rel="stylesheet" href="https://sizerec.herokuapp.com/static/css/vex-theme-os.css" />
+    <link rel="stylesheet" href="https://sizerec.herokuapp.com/static/css/sizerec-style.css" />
+    <script src="https://localhost:5000/static/js/sizerec-script.js"></script>
+
 </head>
 <body>
     <section class="header container">
