--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
     <link rel="icon" type="image/x-icon" href="static/img/favicon.png" />
 
 
-
-    <meta name='shop_name' content="Minh's Store">
-    <meta name='pos_id' content=12>
-    <meta name="sizerec_url" content="https://localhost:5000/c">
-    <link rel="stylesheet" type="text/css" href="https://sizerec.herokuapp.com/static/css/selectize.css" />
-    <link rel="stylesheet" href="https://sizerec.herokuapp.com/static/css/vex.css" />
-    <link rel="stylesheet" href="https://sizerec.herokuapp.com/static/css/vex-theme-os.css" />
-    <link rel="stylesheet" href="https://sizerec.herokuapp.com/static/css/sizerec-style.css" />
-    <script src="https://localhost:5000/static/js/sizerec-script-universal.js"></script>
+    <meta name='shop_name' content="Sherman's Alley"><link rel="stylesheet" type="text/css" href="https://localhost:5000/static/css/selectize.css" /><link rel="stylesheet" href="https://localhost:5000/static/css/vex.css" /><link rel="stylesheet" href="https://localhost:5000/static/css/vex-theme-os.css" /><link rel="stylesheet" href="https://localhost:5000/static/css/sizerec-style.css" /><meta name="sizerec_url" content="https://localhost:5000/c"><script src="https://localhost:5000/static/js/sizerec-script-universal.js"></script>
 
 </head>
 <body>
@@ -39,9 +31,9 @@
             <div class="six columns">
                 <p>I’m Minh.</p>
 
-                <p>I am originally from the Czech Republic, but I moved to the US for university. I'm currently a senior at Yale studying Computer Science. I really enjoy creating useful digital products.</p>
+                <p>I am originally from the Czech Republic, but I moved to the US for university and work. I'm currently an associate product manager at Uber.</p>
 
-                <p>In the past, I have worked at Facebook and Axon. After I graduate, I'll be joining Uber as an associate product manager. My interests technology, beer, coffee, and fashion. In my free time, I write about style on my fashion blog Sherman’s Alley and other stuff on Medium.</p>
+                <p>In the past, I have worked at Facebook and Axon. My interests include cocktails, coffee, and fashion. In my free time, I write about style on my fashion blog Sherman’s Alley and other stuff on Medium.</p>
 
                 <p>Feel free to message me about anything!</p>
 
@@ -51,6 +43,8 @@
                     <a href="http://linkedin.com/in/minhtripham" target="_blank"><img src="static/img/in_icon.png" alt=""></a>
                     <a href="https://www.instagram.com/minhtripham/" target="_blank"><img src="static/img/ig_icon.png" alt=""></a>
                 </div>
+                <a class='sizerec-button sizerec-button-desktop'><img src='https://localhost:5000/static/img/sizerec-button.png'></a>
+
             </div>
             <div class="six columns">
                 <h5 class="right_align">projects</h5>
