--- a/index.html
+++ b/index.html
@@ -28,86 +28,17 @@
     <hr>
     <section class="main container">
         <div class="row">
-            <div class="six columns">
-                <p>I’m Minh.</p>
-
-                <p>I am originally from the Czech Republic, but I moved to the US for university and work. I'm currently an associate product manager at Uber.</p>
-
-                <p>In the past, I have worked at Facebook and Axon. My interests include cocktails, coffee, and fashion. In my free time, I write about style on my fashion blog Sherman’s Alley and other stuff on Medium.</p>
-
-                <p>Feel free to message me about anything!</p>
-
-                <div class="social">
-                    <a href="mailto:minhtri@pham.cz"><img src="static/img/mail_icon.png" alt=""></a>
-                    <a href="https://www.facebook.com/minhtripham" target="_blank"><img src="static/img/fb_icon.png" alt=""></a>
-                    <a href="http://linkedin.com/in/minhtripham" target="_blank"><img src="static/img/in_icon.png" alt=""></a>
-                    <a href="https://www.instagram.com/minhtripham/" target="_blank"><img src="static/img/ig_icon.png" alt=""></a>
-                </div>
-                <a class='sizerec-button sizerec-button-desktop'><img src='https://localhost:5000/static/img/sizerec-button.png'></a>
-
-            </div>
-            <div class="six columns">
-                <h5 class="right_align">projects</h5>
-                    <div class="six columns project">
-                        <a href="http://www.sizerec.com" target="_blank">
-                            <img src="static/img/sr_icon.png" alt="">
-                            <div class="description">
-                                <div class="name">SizeRec</div>
-
-                                <div class="role">Maker</div>
-                                <div class="caption">Sizing recommendation for clothes</div>
-                        
-
-                                <div class="date">2017-present</div>
-
-                            </div>
-                        </a>
-                    </div>
-                    <div class="six columns project">
-                        <a href="http://www.shopthisfeed.com" target="_blank">
-                            <img src="static/img/stf_icon.png" alt="">
-                            <div class="description">
-                                <div class="name">Shopthisfeed</div>
-
-                                <div class="role">Maker</div>
-                                <div class="caption">Make your Instagram shoppable.</div>
-                                <!-- <div class="link"><a target="_blank" href="https://www.shopthisfeed.com">www.shopthisfeed.com</a></div> -->
-                                <div class="date">2016-2017</div>
-
-                            </div>
-                        </a>
-                    </div>
-                    <div class="six columns project">
-                        <a href="http://www.hackprague.com" target="_blank">
-                            <img src="static/img/hp_icon.png" alt="">
-                            <div class="description">
-                                <div class="name">HackPrague</div>
-
-                                <div class="role">Organizer</div>
-                                <div class="caption">Biggest Czech hackathon</div>
-                                <!-- <div class="link"><a target="_blank" href="http://www.hackprague.com">www.hackprague.com</a></div> -->
-                                <div class="date">2017</div>
-
-                            </div>
-                        </a>
-                    </div>
-                    <div class="six columns project">
-                        <a href="http://www.shermansalley.com" target="_blank">
-                            <img src="static/img/sa_icon.png" alt="">
-                            <div class="description">
-                                <div class="name">Sherman's Alley</div>
-
-                                <div class="role">Writer, Editor</div>
-                                <div class="caption">Contemporary men's style blog</div>
-                                <!-- <div class="link"><a target="_blank" href="https://www.shermansalley.com">www.shermansalley.com</a></div> -->
-                                <div class="date">2017-present</div>
-
-                            </div>
-                        </a>
-                    </div>
-            </div>
+            <p>Prague → New Haven → San Francisco → ?</p>
         </div>
     </section>
+    <div class="social">
+        <div class="links">
+        <a href="mailto:minhtri@pham.cz"><img src="static/img/mail_icon.png" alt=""></a>
+        <a href="https://www.facebook.com/minhtripham" target="_blank"><img src="static/img/fb_icon.png" alt=""></a>
+        <a href="http://linkedin.com/in/minhtripham" target="_blank"><img src="static/img/in_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/minhtripham/" target="_blank"><img src="static/img/ig_icon.png" alt=""></a>
+        </div>
+    </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
