--- a/index.html
+++ b/index.html
@@ -6,38 +6,19 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="static/css/normalize.css">
-    <link rel="stylesheet" href="static/css/skeleton.css">
     <link rel="stylesheet" href="static/css/style.css">
 
     <link rel="icon" type="image/x-icon" href="static/img/favicon.png" />
-
-
-    <meta name='shop_name' content="Sherman's Alley"><link rel="stylesheet" type="text/css" href="https://localhost:5000/static/css/selectize.css" /><link rel="stylesheet" href="https://localhost:5000/static/css/vex.css" /><link rel="stylesheet" href="https://localhost:5000/static/css/vex-theme-os.css" /><link rel="stylesheet" href="https://localhost:5000/static/css/sizerec-style.css" /><meta name="sizerec_url" content="https://localhost:5000/c"><script src="https://localhost:5000/static/js/sizerec-script-universal.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-    <section class="header container">
-        <h1 class="name_header">MINH TRI PHAM</h1>
-        <div class="navbar">
-            <ul>
-                <a href="https://medium.com/@minhtri_pham/" target="_blank"><li>blog</li></a>
-                <a href="http://www.shermansalley.com/" target="_blank"><li>style</li></a>
-            </ul>
-        </div>
-    </section>
-    <hr>
-    <section class="main container">
-        <div class="row">
-            <p>Prague → New Haven → San Francisco → ?</p>
-        </div>
-    </section>
-    <div class="social">
-        <div class="links">
-        <a href="mailto:minhtri@pham.cz"><img src="static/img/mail_icon.png" alt=""></a>
-        <a href="https://www.facebook.com/minhtripham" target="_blank"><img src="static/img/fb_icon.png" alt=""></a>
-        <a href="http://linkedin.com/in/minhtripham" target="_blank"><img src="static/img/in_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/minhtripham/" target="_blank"><img src="static/img/ig_icon.png" alt=""></a>
-        </div>
+    <div class="body">
+        <div class="name">Minh Tri Pham</div>
+        <a href="mailto:minhtri@pham.cz"><img src="static/img/email.ico" alt=""></a>
+        <a href="http://linkedin.com/in/minhtripham" target="_blank"><img src="static/img/linkedin.png" alt=""></a>
+        <a href="https://www.instagram.com/minhtripham/" target="_blank"><img src="static/img/instagram.png" alt=""></a>
+        <a href="https://www.facebook.com/minhtripham" target="_blank"><img src="static/img/facebook.png" alt=""></a>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
