--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="static/css/style.css">
 
     <link rel="icon" type="image/x-icon" href="static/img/favicon.png" />
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400" rel="stylesheet" type="text/css">
 
 </head>
 <body>
     <div class="body">
-        <div class="name">Minh Tri Pham</div>
+        <div class="name">MINH TRI PHAM</div>
         <a href="mailto:minhtri@pham.cz"><img src="static/img/email.ico" alt=""></a>
         <a href="http://linkedin.com/in/minhtripham" target="_blank"><img src="static/img/linkedin.png" alt=""></a>
         <a href="https://www.instagram.com/minhtripham/" target="_blank"><img src="static/img/instagram.png" alt=""></a>
